--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,12 +15,12 @@
 
 package:
   name: log4cxx
-  version: 0.10.0
+  version: 0.11.0
 
 source:
-  - url: http://archive.apache.org/dist/logging/log4cxx/0.10.0/apache-log4cxx-0.10.0.tar.gz
-    fn:  apache-log4cxx-0.10.0.tar.gz
-    sha256: 0de0396220a9566a580166e66b39674cb40efd2176f52ad2c65486c99c920c8c
+  - url: http://archive.apache.org/dist/logging/log4cxx/{{ version }}/apache-log4cxx-{{ version }}.tar.gz
+    fn:  apache-log4cxx-{{ version }}.tar.gz
+    sha256: c316705ee3c4e5b919d3561d5f305162d21687aa6ae1f31f02f6cdadc958b393
     patches:
       - 001-fix-compilation.patch  # [unix]
       - 002-fix-osx.patch  # [unix]
@@ -28,7 +28,7 @@ source:
   - path: CMakeLists.txt  # [win]
 
 build:
-  number: 2
+  number: 0
   skip: true  # [win and vc<14]
 
 requirements:
