--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,8 @@ source:
     fn:  apache-{{ name }}-{{ version }}.tar.gz
     sha256: c316705ee3c4e5b919d3561d5f305162d21687aa6ae1f31f02f6cdadc958b393
     patches:
-      - 002-fix-osx.patch  # [unix]
+      - 001-fix-osx-segfault.patch
+      - 002-fix-osx.patch
   - path: CMakeLists.txt
 
 build:
@@ -38,6 +39,7 @@ requirements:
     - {{ compiler('c') }}
     - cmake
     - make
+    - zip  # [unix]
   host:
     - expat
     - apr
@@ -50,8 +52,6 @@ requirements:
 
 
 test:
-  requires:
-    - zip  # [unix]
   commands:
     - test -f $PREFIX/include/log4cxx/appender.h  # [unix]
     - test -f $PREFIX/include/log4cxx/logmanager.h  # [unix]
