Only run tests on linux

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,7 @@ requirements:
     - {{ compiler('c') }}
     - cmake
     - make
-    - zip  # [unix]
+    - zip  # [linux]
   host:
     - expat
     - apr
