--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,8 +30,11 @@ source:
   - path: CMakeLists.txt
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win and vc<14]
+  run_exports:
+    # no ABI lab data, soname is changing with each release
+    - {{ pin_compatible("log4cxx", max_pin="x.x.x") }}
 
 requirements:
   build:
