--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@
 #--------------------------------------------------------------------------------
 
 {% set name = "log4cxx" %}
-{% set version = "0.11.0" %}
+{% set version = "1.1.0" %}
 
 package:
   name: {{ name }}
@@ -22,15 +22,12 @@ package:
 
 source:
   - url: http://archive.apache.org/dist/logging/{{ name }}/{{ version }}/apache-{{ name }}-{{ version }}.tar.gz
-    fn:  apache-{{ name }}-{{ version }}.tar.gz
-    sha256: c316705ee3c4e5b919d3561d5f305162d21687aa6ae1f31f02f6cdadc958b393
-    patches:
-      - 001-fix-osx-segfault.patch
-      - 002-fix-osx.patch
+    fn: apache-{{ name }}-{{ version }}.tar.gz
+    sha256: 1fc7d82697534184bc0f757348d969d24852b948f63d6b17283fd1ee29c2c28a
   - path: CMakeLists.txt
 
 build:
-  number: 3
+  number: 0
   skip: true  # [win and vc<14]
   run_exports:
     # no ABI lab data, soname is changing with each release
@@ -84,3 +81,4 @@ extra:
     - lesteve
     - seanyen
     - brianv0
+    - mwittgen
