--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,10 +41,12 @@ requirements:
     - cmake
     - make
     - zip  # [linux]
+    - sed  # [win]
   host:
     - expat
     - apr
     - libiconv
+    - fmt
   run:
     - expat
     - apr
