--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,6 +43,7 @@ requirements:
     - zip  # [linux]
     - m2-sed  # [win]
     - m2-zip  # [win]
+    - gzip  # [win]
   host:
     - expat
     - apr
