--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,9 +1,16 @@
-build_platform: {osx_arm64: osx_64}
+azure:
+  store_build_artifacts: true
+build_platform:
+  linux_aarch64: linux_64
+  osx_arm64: osx_64
+conda_build:
+  pkg_format: '2'
 conda_forge_output_validation: true
-provider: {linux_aarch64: default, linux_ppc64le: default}
-test_on_native_only: true
 github:
   branch_name: main
   tooling_branch_name: main
-conda_build:
-  pkg_format: '2'
+os_version:
+  linux_64: cos7
+provider:
+  linux_aarch64: default
+test: native_and_emulated
