--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,8 +30,8 @@ source:
   - path: CMakeLists.txt
 
 build:
-  number: 4
-  skip: true  # [win and vc<14]
+  number: 3 
+  skip: true  # [not linux and not aarch64]
   run_exports:
     # no ABI lab data, soname is changing with each release
     - {{ pin_subpackage("log4cxx", max_pin="x.x.x") }}
