--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ source:
   - path: CMakeLists.txt
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win and vc<14]
   run_exports:
     # no ABI lab data, soname is changing with each release
@@ -49,6 +49,7 @@ requirements:
     - apr
     - libiconv
     - fmt
+    - libxcrypt  # [linux]
   run:
     - expat
     - apr
